frontends/web/src/components/dialog/dialog.module.css
.overlay {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: fixed;
    bottom: 0;
    left: 0;
    height: 100vh;
    max-height: -webkit-fill-available;
    width: 100%;
    background: transparent;
    z-index: 4010;
    touch-action: none;
    overscroll-behavior: contain;
}

.overlay.activeOverlay {
    background-color: var(--bg-transparent-dark);
}

.modal {
    background-color: var(--background-secondary);
    border-radius: var(--radius-xl);
    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
    display: flex;
    flex-direction: column;
    max-height: calc(100dvh - calc(env(safe-area-inset-top) * 2));
    max-width: 420px;
    overflow: auto;
    text-align: left;
    touch-action: auto;
    -webkit-overflow-scrolling: touch;
    width: 100%;
}
/* guard dialog and wait-dialog from view styles */
@media (min-width: 1200px) {
    .modal {
        margin-left: var(--sidebar-width-large);
    }
    .modal.noSidebarOffset {
        margin-left: 0;
    }
    .modal .contentContainer p {
        --size-default: var(--size-default);
    }
}

.modal.small {
    max-width: 340px;
    width: 100%;
}

.modal.medium {
    /* long enough to fit a bc1... address in the receive screen on desktop */
    max-width: 520px;
    width: 100%;
}

.modal.large {
    max-width: 800px;
    width: 100%;
}

.header {
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-shrink: 0;
    justify-content: space-between;
    padding: 13.5px var(--space-half);
}

.header.centered {
    justify-content: center;
}

.header .title {
    margin: 0;
    font-size: var(--size-subheader);
    font-weight: 400;
}

.closeButton {
    background: none;
    border: none;
    padding: 0;
    width: auto !important;
}

.closeButton:focus {
    outline: none;
}

.closeButton:disabled {
    color: var(--color-secondary);
}

.header .closeButton,
.header .closeButton img {
    width: var(--size-subheader);
    height: var(--size-subheader);
}

.contentContainer {
    display: flex;
    flex-direction: column;
    flex-grow: 0; 
    flex-shrink: 1;
    flex-basis: 0%;
    max-height: 100%;
    overflow: auto;
    padding: var(--space-half);
}

.contentContainer.slim {
    padding: 0;
}

.contentContainer p {
    word-break: break-word;
}

.dialogScrollContent {
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 0%;
    max-height: 100%;
    min-height: 3lh; /* overwritten in react component */
    overflow: auto;
}

.actions button,
.actions a,
.small .actions button,
.small .actions a {
    width: 100%;
}

.actions > *:not(:last-child),
.small .actions > *:not(:last-child) {
    margin-bottom: var(--space-quarter);
}

.actions {
    margin-top: var(--space-quarter);
}


/* WAIT DIALOG */
.confirmationLabel {
    position: relative;
    line-height: 1.3;
    font-size: var(--size-default);
    font-weight: 400;
}

.dialogButtons {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    margin-top: var(--space-default);
}
.dialogButtons > *:only-child {
    width: 100%;
}

@media (min-width: 769px) {
    .closingOverlay {
        display: none;
    }
}

@media (max-width: 768px) {

    .header .title{
        font-size: var(--size-header);
    }

    .modal {
        padding: 0;
        height: auto;
        max-height: 100dvh;
        display: flex;
        flex-direction: column;
        overflow: hidden;
    }

    .overlay {
        align-items: stretch;
        max-height: 100vh;
        padding-top: calc(var(--space-default) + env(safe-area-inset-top, 0));
    }

    .modal, .modal.small, .modal.medium, .modal.large { 
        margin-top: 0;
        max-width: 100vw;
        transform: translateY(100vh);
        transition: transform 300ms ease-out;
        border-top-right-radius: var(--space-half);
        border-top-left-radius: var(--space-half);
    }

    .modal.open {
      transition: transform 300ms ease-out;
      transform: translateY(0);
    }

    /*header wont shrink*/
    .header {
        flex-shrink: 0;
    }

    /*content will shrink and grow if needed (fill remaining space)*/
    .contentContainer {
        flex-grow: 1;
        flex-shrink: 1;
        flex-basis: 0%; /* start from 0, then grow if needed */
        overflow-y: auto;
        -webkit-overflow-scrolling: touch;
    }

    .contentContainer.slim {
        padding-bottom: calc(env(safe-area-inset-bottom, 0));
    }
}

